@@ -336,63 +336,3 @@ void tilem_config_set(const char *group, const char *option, ...)
 	g_key_file_free(gkf);
 }
 
-#if 0
-
-/* Search the most recent rom */
-char* get_recentrom(char* romname)
-{
-	/* FIXME: I'm not sure what exactly this function is supposed
-	   to be doing, but it's not doing it :) */
-
-	GKeyFile * gkf;
-	gkf = g_key_file_new();
-	
-	if (! g_key_file_load_from_file(gkf, CONFIG_FILE, G_KEY_FILE_KEEP_COMMENTS | G_KEY_FILE_KEEP_TRANSLATIONS, NULL)) {
-		fprintf(stderr, "Could not read config file '%s'\n", CONFIG_FILE);
-		exit(EXIT_FAILURE);
-	}
-
-	char* recentrom = g_key_file_get_string(gkf, "skin", romname, NULL);
-
-	
-	g_key_file_free(gkf);
-	return recentrom;
-}
-
-/* Add the given file to the list of recently used ROM files */
-void set_recentrom(const char* romname)
-{
-	GKeyFile * gkf;
-	char key[10];
-	char *values[MAX_RECENT_FILES];
-	int i, j;
-
-	gkf = load_config(TRUE);
-
-	for (i = 0; i < MAX_RECENT_FILES; i++) {
-		g_snprintf(key, sizeof(key), "rom%d", i);
-		values[i] = key_file_get_filename(gkf, "recent", key, NULL);
-	}
-
-	for (i = 0; i < MAX_RECENT_FILES; i++)
-		if (!values[i] || !strcmp(values[i], romname))
-			break;
-
-	/* Shift from top to bottom */
-	for (j = i; j > 0; j--) {
-		g_snprintf(key, sizeof(key), "rom%d", j);
-		key_file_set_filename(gkf, "recent", values[j - 1], NULL);
-	}
-
-	/* write the most recent rom */
-	key_file_set_filename(gkf, "recent", "rom0", romname);
-
-	for (i = 0; i < MAX_RECENT_FILES; i++)
-		g_free(values[i]);
-
-	/* Save the config */
-	save_config(gkf);
-	g_key_file_free(gkf);
-}
-
-#endif
